# her_backend

./: .env.example  .pre-commit-config.yaml  README.md  conversation_ids.json  create_db.py  her.db  main.py  pyproject.toml  requirements.txt
prompts/flows/: followup.md  onboarding.md  onboarding2_ui.md  onboarding_first_message.md
prompts/follow_up/: follow_up.md  follow_up_low_opinionated_on_goals.md
prompts/personality/: personality.md
src/: cli.py  eleven.py  graphiti.py  inbound.py  make_call.py  twilio_audio_interface.py
src/coach/: coach_infrastructure.py
src/db/: drop_tables.py  llm_model.py  model.py
src/her/: cli.py
src/her/engine/: coach_infrastructure.py  prompt_builder.py
src/her/engine/channels/: __init__.py  phone.py
src/her/platform/: settings.py
src/her/platform/db/: __init__.py  models.py
src/her/services/: conversation_service.py
src/prompts/: example_full.md  first_message_onboarding.md  onboarding.md
src/prompts/books/: atomic_habits_prompt.md
src/prompts/demo/: fm_follow_up.md  fm_future.md  fm_onboarding.md  follow_up.md  future_follow_up.md  onboarding.md
src/prompts/follow_up/: first_message_follow_up.md
src/prompts/jariks_prompts/: onboarding2_structured_personality_jarik.md  onboarding_2.1.md  onboarding_jarik.md  personality_jarik.md
src/prompts/mock_user_graph/: mock_user.md
src/prompts/onboarding/: first_message_onboarding.md  onboarding_jarik.md
src/prompts/personality/: cute_pushy_personality.md  demo_tryout.md  full_jarik.md  her.md  her_2.md  personality.md  pushier_personality.md  pushy_2.md  synthesis_personality.md
src/utils/: agenda.py  api.py  zep.py
