[project]
name = "her-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "elevenlabs==1.54.0",
    "fastapi>=0.115.12",
    "flake8>=7.2.0",
    "google-genai>=1.13.0",
    "graphiti-core[google-genai]>=0.11.3",
    "isort>=6.0.1",
    "modal>=0.74.39",
    "openai>=1.76.2",
    "pre-commit>=4.2.0",
    "requests>=2.32.3",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "sqlmodel>=0.0.24",
    "twilio>=9.5.2",
    "uvicorn>=0.34.2",
    "websockets>=15.0.1",
    "zep-cloud>=2.12.1",
    "autopep8>=2.3.2",
]

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
