[project]
name = "her-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-core>=1.30.0",
    "azure-identity>=1.15.0",
    "elevenlabs>=0.2.26",
    "fastapi>=0.89.0",
    "graphiti-core>=0.1.0",
    "modal>=0.54.3",
    "neo4j>=5.0.0",
    "openai>=1.6.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.24.0",
    "zep-cloud>=2.16.0",
]
